src/nanovg/api.zig


extern fn nvgCreateImageRGBA(ctx: ?*NVGcontext, w: c_int, h: c_int, imageFlags: c_int, data: [*c]const u8) c_int;
pub fn createImageRGBA(ctx: ?*NVGcontext, w: c_int, h: c_int, imageFlags: c_int, data: [*c]const u8) c_int {
    return nvgCreateImageRGBA(ctx, w, h, imageFlags, data);
}

extern fn nvgUpdateImage(ctx: ?*NVGcontext, image: c_int, data: [*c]const u8) void;
pub fn updateImage(ctx: ?*NVGcontext, image: c_int, data: [*c]const u8) void {
    return nvgUpdateImage(ctx, image, data);
}

extern fn nvgImageSize(ctx: ?*NVGcontext, image: c_int, w: [*c]c_int, h: [*c]c_int) void;
pub fn imageSize(ctx: ?*NVGcontext, image: c_int, w: [*c]c_int, h: [*c]c_int) void {
    return nvgImageSize(ctx, image, w, h);
}

extern fn nvgDeleteImage(ctx: ?*NVGcontext, image: c_int) void;
pub fn deleteImage(ctx: ?*NVGcontext, image: c_int) void {
    return nvgDeleteImage(ctx, image);
}

extern fn nvgLinearGradient(ctx: ?*NVGcontext, sx: f32, sy: f32, ex: f32, ey: f32, icol: NVGcolor, ocol: NVGcolor) NVGpaint;
pub fn linearGradient(ctx: ?*NVGcontext, sx: f32, sy: f32, ex: f32, ey: f32, icol: NVGcolor, ocol: NVGcolor) NVGpaint {
    return nvgLinearGradient(ctx, sx, sy, ex, ey, icol, ocol);
}

extern fn nvgBoxGradient(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32, r: f32, f: f32, icol: NVGcolor, ocol: NVGcolor) NVGpaint;
pub fn boxGradient(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32, r: f32, f: f32, icol: NVGcolor, ocol: NVGcolor) NVGpaint {
    return nvgBoxGradient(ctx, x, y, w, h, r, f, icol, ocol);
}

extern fn nvgRadialGradient(ctx: ?*NVGcontext, cx: f32, cy: f32, inr: f32, outr: f32, icol: NVGcolor, ocol: NVGcolor) NVGpaint;
pub fn radialGradient(ctx: ?*NVGcontext, cx: f32, cy: f32, inr: f32, outr: f32, icol: NVGcolor, ocol: NVGcolor) NVGpaint {
    return nvgRadialGradient(ctx, cx, cy, inr, outr, icol, ocol);
}

extern fn nvgImagePattern(ctx: ?*NVGcontext, ox: f32, oy: f32, ex: f32, ey: f32, angle: f32, image: c_int, alpha: f32) NVGpaint;
pub fn imagePattern(ctx: ?*NVGcontext, ox: f32, oy: f32, ex: f32, ey: f32, angle: f32, image: c_int, alpha: f32) NVGpaint {
    return nvgImagePattern(ctx, ox, oy, ex, ey, angle, image, alpha);
}

extern fn nvgScissor(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32) void;
pub fn scissor(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32) void {
    return nvgScissor(ctx, x, y, w, h);
}

extern fn nvgIntersectScissor(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32) void;
pub fn intersectScissor(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32) void {
    return nvgIntersectScissor(ctx, x, y, w, h);
}

extern fn nvgResetScissor(ctx: ?*NVGcontext) void;
pub fn resetScissor(ctx: ?*NVGcontext) void {
    return nvgResetScissor(ctx);
}

extern fn nvgBeginPath(ctx: ?*NVGcontext) void;
pub fn beginPath(ctx: ?*NVGcontext) void {
    return nvgBeginPath(ctx);
}

extern fn nvgMoveTo(ctx: ?*NVGcontext, x: f32, y: f32) void;
pub fn moveTo(ctx: ?*NVGcontext, x: f32, y: f32) void {
    return nvgMoveTo(ctx, x, y);
}

extern fn nvgLineTo(ctx: ?*NVGcontext, x: f32, y: f32) void;
pub fn lineTo(ctx: ?*NVGcontext, x: f32, y: f32) void {
    return nvgLineTo(ctx, x, y);
}

extern fn nvgBezierTo(ctx: ?*NVGcontext, c1x: f32, c1y: f32, c2x: f32, c2y: f32, x: f32, y: f32) void;
pub fn bezierTo(ctx: ?*NVGcontext, c1x: f32, c1y: f32, c2x: f32, c2y: f32, x: f32, y: f32) void {
    return nvgBezierTo(ctx, c1x, c1y, c2x, c2y, x, y);
}

extern fn nvgQuadTo(ctx: ?*NVGcontext, cx: f32, cy: f32, x: f32, y: f32) void;
pub fn quadTo(ctx: ?*NVGcontext, cx: f32, cy: f32, x: f32, y: f32) void {
    return nvgQuadTo(ctx, cx, cy, x, y);
}

extern fn nvgArcTo(ctx: ?*NVGcontext, x1: f32, y1: f32, x2: f32, y2: f32, radius: f32) void;
pub fn arcTo(ctx: ?*NVGcontext, x1: f32, y1: f32, x2: f32, y2: f32, radius: f32) void {
    return nvgArcTo(ctx, x1, y1, x2, y2, radius);
}

extern fn nvgClosePath(ctx: ?*NVGcontext) void;
pub fn closePath(ctx: ?*NVGcontext) void {
    return nvgClosePath(ctx);
}

extern fn nvgPathWinding(ctx: ?*NVGcontext, dir: c_int) void;
pub fn pathWinding(ctx: ?*NVGcontext, dir: c_int) void {
    return nvgPathWinding(ctx, dir);
}

extern fn nvgArc(ctx: ?*NVGcontext, cx: f32, cy: f32, r: f32, a0: f32, a1: f32, dir: c_int) void;
pub fn arc(ctx: ?*NVGcontext, cx: f32, cy: f32, r: f32, a0: f32, a1: f32, dir: c_int) void {
    return nvgArc(ctx, cx, cy, r, a0, a1, dir);
}

extern fn nvgRect(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32) void;
pub fn rect(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32) void {
    return nvgRect(ctx, x, y, w, h);
}

extern fn nvgRoundedRect(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32, r: f32) void;
pub fn roundedRect(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32, r: f32) void {
    return nvgRoundedRect(ctx, x, y, w, h, r);
}

extern fn nvgRoundedRectVarying(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32, radTopLeft: f32, radTopRight: f32, radBottomRight: f32, radBottomLeft: f32) void;
pub fn roundedRectVarying(ctx: ?*NVGcontext, x: f32, y: f32, w: f32, h: f32, radTopLeft: f32, radTopRight: f32, radBottomRight: f32, radBottomLeft: f32) void {
    return nvgRoundedRectVarying(ctx, x, y, w, h, radTopLeft, radTopRight, radBottomRight, radBottomLeft);
}

extern fn nvgEllipse(ctx: ?*NVGcontext, cx: f32, cy: f32, rx: f32, ry: f32) void;
pub fn ellipse(ctx: ?*NVGcontext, cx: f32, cy: f32, rx: f32, ry: f32) void {
    return nvgEllipse(ctx, cx, cy, rx, ry);
}

extern fn nvgCircle(ctx: ?*NVGcontext, cx: f32, cy: f32, r: f32) void;
pub fn circle(ctx: ?*NVGcontext, cx: f32, cy: f32, r: f32) void {
    return nvgCircle(ctx, cx, cy, r);
}

extern fn nvgFill(ctx: ?*NVGcontext) void;
pub fn fill(ctx: ?*NVGcontext) void {
    return nvgFill(ctx);
}

extern fn nvgStroke(ctx: ?*NVGcontext) void;
pub fn stroke(ctx: ?*NVGcontext) void {
    return nvgStroke(ctx);
}

extern fn nvgCreateFont(ctx: ?*NVGcontext, name: [*c]const u8, filename: [*c]const u8) c_int;
pub fn createFont(ctx: ?*NVGcontext, name: [*c]const u8, filename: [*c]const u8) c_int {
    return nvgCreateFont(ctx, name, filename);
}

extern fn nvgCreateFontAtIndex(ctx: ?*NVGcontext, name: [*c]const u8, filename: [*c]const u8, fontIndex: c_int) c_int;
pub fn createFontAtIndex(ctx: ?*NVGcontext, name: [*c]const u8, filename: [*c]const u8, fontIndex: c_int) c_int {
    return nvgCreateFontAtIndex(ctx, name, filename, fontIndex);
}

extern fn nvgCreateFontMem(ctx: ?*NVGcontext, name: [*c]const u8, data: [*c]u8, ndata: c_int, freeData: c_int) c_int;
pub fn createFontMem(ctx: ?*NVGcontext, name: [*c]const u8, data: [*c]u8, ndata: c_int, freeData: c_int) c_int {
    return nvgCreateFontMem(ctx, name, data, ndata, freeData);
}

extern fn nvgCreateFontMemAtIndex(ctx: ?*NVGcontext, name: [*c]const u8, data: [*c]u8, ndata: c_int, freeData: c_int, fontIndex: c_int) c_int;
pub fn createFontMemAtIndex(ctx: ?*NVGcontext, name: [*c]const u8, data: [*c]u8, ndata: c_int, freeData: c_int, fontIndex: c_int) c_int {
    return nvgCreateFontMemAtIndex(ctx, name, data, ndata, freeData, fontIndex);
}

extern fn nvgFindFont(ctx: ?*NVGcontext, name: [*c]const u8) c_int;
pub fn findFont(ctx: ?*NVGcontext, name: [*c]const u8) c_int {
    return nvgFindFont(ctx, name);
}

extern fn nvgAddFallbackFontId(ctx: ?*NVGcontext, baseFont: c_int, fallbackFont: c_int) c_int;
pub fn addFallbackFontId(ctx: ?*NVGcontext, baseFont: c_int, fallbackFont: c_int) c_int {
    return nvgAddFallbackFontId(ctx, baseFont, fallbackFont);
}

extern fn nvgAddFallbackFont(ctx: ?*NVGcontext, baseFont: [*c]const u8, fallbackFont: [*c]const u8) c_int;
pub fn addFallbackFont(ctx: ?*NVGcontext, baseFont: [*c]const u8, fallbackFont: [*c]const u8) c_int {
    return nvgAddFallbackFont(ctx, baseFont, fallbackFont);
}

extern fn nvgResetFallbackFontsId(ctx: ?*NVGcontext, baseFont: c_int) void;
pub fn resetFallbackFontsId(ctx: ?*NVGcontext, baseFont: c_int) void {
    return nvgResetFallbackFontsId(ctx, baseFont);
}

extern fn nvgResetFallbackFonts(ctx: ?*NVGcontext, baseFont: [*c]const u8) void;
pub fn resetFallbackFonts(ctx: ?*NVGcontext, baseFont: [*c]const u8) void {
    return nvgResetFallbackFonts(ctx, baseFont);
}

extern fn nvgFontSize(ctx: ?*NVGcontext, size: f32) void;
pub fn fontSize(ctx: ?*NVGcontext, size: f32) void {
    return nvgFontSize(ctx, size);
}

extern fn nvgFontBlur(ctx: ?*NVGcontext, blur: f32) void;
pub fn fontBlur(ctx: ?*NVGcontext, blur: f32) void {
    return nvgFontBlur(ctx, blur);
}

extern fn nvgTextLetterSpacing(ctx: ?*NVGcontext, spacing: f32) void;
pub fn textLetterSpacing(ctx: ?*NVGcontext, spacing: f32) void {
    return nvgTextLetterSpacing(ctx, spacing);
}

extern fn nvgTextLineHeight(ctx: ?*NVGcontext, lineHeight: f32) void;
pub fn textLineHeight(ctx: ?*NVGcontext, lineHeight: f32) void {
    return nvgTextLineHeight(ctx, lineHeight);
}

extern fn nvgTextAlign(ctx: ?*NVGcontext, @"align": c_int) void;
pub fn textAlign(ctx: ?*NVGcontext, @"align": c_int) void {
    return nvgTextAlign(ctx, @"align");
}

extern fn nvgFontFaceId(ctx: ?*NVGcontext, font: c_int) void;
pub fn fontFaceId(ctx: ?*NVGcontext, font: c_int) void {
    return nvgFontFaceId(ctx, font);
}

extern fn nvgFontFace(ctx: ?*NVGcontext, font: [*c]const u8) void;
pub fn fontFace(ctx: ?*NVGcontext, font: [*c]const u8) void {
    return nvgFontFace(ctx, font);
}

extern fn nvgText(ctx: ?*NVGcontext, x: f32, y: f32, string: [*c]const u8, end: [*c]const u8) f32;
pub fn text(ctx: ?*NVGcontext, x: f32, y: f32, string: [*c]const u8, end: [*c]const u8) f32 {
    return nvgText(ctx, x, y, string, end);
}

extern fn nvgTextBox(ctx: ?*NVGcontext, x: f32, y: f32, breakRowWidth: f32, string: [*c]const u8, end: [*c]const u8) void;
pub fn textBox(ctx: ?*NVGcontext, x: f32, y: f32, breakRowWidth: f32, string: [*c]const u8, end: [*c]const u8) void {
    return nvgTextBox(ctx, x, y, breakRowWidth, string, end);
}

extern fn nvgTextBounds(ctx: ?*NVGcontext, x: f32, y: f32, string: [*c]const u8, end: [*c]const u8, bounds: [*c]f32) f32;
pub fn textBounds(ctx: ?*NVGcontext, x: f32, y: f32, string: [*c]const u8, end: [*c]const u8, bounds: [*c]f32) f32 {
    return nvgTextBounds(ctx, x, y, string, end, bounds);
}

extern fn nvgTextBoxBounds(ctx: ?*NVGcontext, x: f32, y: f32, breakRowWidth: f32, string: [*c]const u8, end: [*c]const u8, bounds: [*c]f32) void;
pub fn textBoxBounds(ctx: ?*NVGcontext, x: f32, y: f32, breakRowWidth: f32, string: [*c]const u8, end: [*c]const u8, bounds: [*c]f32) void {
    return nvgTextBoxBounds(ctx, x, y, breakRowWidth, string, end, bounds);
}

extern fn nvgTextGlyphPositions(ctx: ?*NVGcontext, x: f32, y: f32, string: [*c]const u8, end: [*c]const u8, positions: [*c]NVGglyphPosition, maxPositions: c_int) c_int;
pub fn textGlyphPositions(ctx: ?*NVGcontext, x: f32, y: f32, string: [*c]const u8, end: [*c]const u8, positions: [*c]NVGglyphPosition, maxPositions: c_int) c_int {
    return nvgTextGlyphPositions(ctx, x, y, string, end, positions, maxPositions);
}

extern fn nvgTextMetrics(ctx: ?*NVGcontext, ascender: [*c]f32, descender: [*c]f32, lineh: [*c]f32) void;
pub fn textMetrics(ctx: ?*NVGcontext, ascender: [*c]f32, descender: [*c]f32, lineh: [*c]f32) void {
    return nvgTextMetrics(ctx, ascender, descender, lineh);
}

extern fn nvgTextBreakLines(ctx: ?*NVGcontext, string: [*c]const u8, end: [*c]const u8, breakRowWidth: f32, rows: [*c]NVGtextRow, maxRows: c_int) c_int;
pub fn textBreakLines(ctx: ?*NVGcontext, string: [*c]const u8, end: [*c]const u8, breakRowWidth: f32, rows: [*c]NVGtextRow, maxRows: c_int) c_int {
    return nvgTextBreakLines(ctx, string, end, breakRowWidth, rows, maxRows);
}
